# concurrent-programming

./: CMakeLists.txt  README.md  args_threads  args_threads.c  main.c  norace  race  race.c
examples/: race.c
examples/cond_var/: barbiere_dormiente  barbiere_dormiente.c
examples/cunit_test/: cuint_test  cunit_test2
examples/proces/: exec_fork1.c  exec_fork3  exec_fork3.c  fork  fork.c  lol.c  wait  wait.c  zombie  zombie.c
examples/thread/: detached.c  firstthread.c  norace.c
exers/: ex1  ex1.c
hcw1/: README.txt  buffer.c  buffer.h  build_run_unit_test.sh  functions.c  functions.h  hwc1_unit_test  hwc1_unit_test.c  main.c  msg.c  msg.h  output_test.txt  test  test.c  unit_test  unit_test.c
hcw1/unit_test/: test_case1.c
hwc1/: README.md  wiki.md
hwc2/: README.md  README.txt  accepter.c  accepter.h  buffer_concurrent.c  buffer_concurrent.h  dispatcher.c  dispatcher.h  list_concurrent.c  list_concurrent.h  monitor.c  monitor.h  monitor_buffer.c  monitor_buffer.h  poison_pill.c  poison_pill.h  provider.c  provider.h  reader.c  reader.h  runner.sh  test_driver.c  test_runner  wiki.md
hwc2/accepter/: accepter.c  accepter.h
hwc2/dispatcher/: dispatcher.c  dispatcher.h
hwc2/hwc1/: README.txt  buffer.c  buffer.h  functions.c  test.c
hwc2/hwc2list/: TestDriver.c  list.c  list.c~
hwc2/provider/: provider.c  provider.h
hwc2/reader/: reader.c  reader.h
hwc2/test/: test_accepter.c  test_accepter.h  test_buffer.c  test_buffer.h  test_buffer_concurrent.c  test_buffer_concurrent.h  test_dispatcher.c  test_dispatcher.h  (+4 more)
hwj/: README.md
hwj_new/: README
(+123 files in other folders)
